--- a/kotlinProject/app/src/main/res/layout/activity_main.xml
+++ b/kotlinProject/app/src/main/res/layout/activity_main.xml
@@ -17,5 +17,26 @@
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
+  <Button
+      android:id="@+id/btn"
+      android:layout_width="100dp"
+      android:layout_height="45dp"
+      android:background="@color/colorAccent"
+      style="?attr/buttonBarButtonStyle"
+      />
+  <TextView
+      android:id="@+id/txt_content"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      app:layout_constraintEnd_toEndOf="@+id/btn"
+      tools:ignore="MissingConstraints"
+      tools:layout_editor_absoluteY="16dp"
+      />
 
+
+  <ListView
+      android:id="@+id/list_view"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      />
 </android.support.constraint.ConstraintLayout>
