--- a/MyAndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/MyAndroidProject/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,61 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     >
-
-  <TextView
+  <Button
+      android:id="@+id/get"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
+      android:text="获取数据"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintHorizontal_bias="0.087"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.06"
+      />
+  <Button
+      android:id="@+id/insert"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="插入数据"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.06"
       />
+
+  <Button
+      android:id="@+id/delete"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="删除数据"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintHorizontal_bias="0.902"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.06"
+      />
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_marginTop="80dp"
+      android:fillViewport="true"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/insert"
+      tools:ignore="MissingConstraints"
+      tools:layout_editor_absoluteX="0dp"
+      >
+    <TextView
+        android:id="@+id/txt_msg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="15dp"
+        android:textColor="#ff00"
+        tools:layout_editor_absoluteY="100dp"
+        />
+  </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
